# cppKata

./: .gitignore  CMakeLists.txt  KataConfig.h  KataConfig.h.in
Kata/: CMakeLists.txt  Kata.cpp  Kata.h  KataTest.cpp
ci/: all.sh  build.sh  run-tests.sh
